[metadata]
name = ImgGameLib
version = 0.0.1
author = aaguy-hue
author_email = aaditmathur6.extra@gmail.com
description = A lightweight wrapper around pillow for making games with images
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aaguy-hue/ImgGameLib
project_urls =
    Bug Tracker = https://github.com/aaguy-hue/ImgGameLib/issues
classifiers =
    Topic :: Software Development :: User Interfaces
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11


[options]
package_dir =
    = src
packages = ImgGameLib
python_requires = >=3.7
install_requires = 
    pillow
